--- a/home.html
+++ b/home.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>TGIF</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./dist/style.css">
 </head>
 
 <body>
   <h1>Welcome to TGIF</h1>
 </body>
-<script src="./JS/main.js"></script>
+<script src="./dist/main.bundle.js"></script>
 
 </html>
