Jumbotron and About added to Senate and House pages

--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
     <div class="card mt-3" style="max-width: 100%;">
       <div class="row no-gutters">
         <div class="about-img col-md-4">
-          <!-- <img src="./img/americanFlag.jpg" class="card-img" alt="american flag"> -->
+          <img src="./img/TGIFlogo.png" class="card-img" alt="logo">
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -92,7 +92,7 @@
 
               TGIF works to disclose information in forms that the public can readily find and use. We solicit public
               feedback to identify information of greatest use to the public.</p>
-            <p class="card-text"><a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1"
+            <p class="card-text"><a class="btn btn-outline-dark" data-toggle="collapse" href="#multiCollapseExample1"
                 role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Read more</a></p>
             <div class="row">
               <div class="col">
