--- a/house-data.html
+++ b/house-data.html
@@ -15,6 +15,13 @@
 <body>
   <div class="container">
 
+    <div class="jumbotron jumbotron-fluid m-0">
+      <div class="container">
+        <h1 class="display-4">House of Representatives</h1>
+        <p class="lead">Transparent Government in Facts</p>
+      </div>
+    </div>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -60,15 +67,67 @@
       </div>
     </nav>
 
+    <div class="card mt-3" style="max-width: 100%;">
+      <div class="row no-gutters">
+        <!-- <div class="about-img col-md-4">
+          <img src="./img/TGIFlogo.png" class="card-img" alt="logo">
+        </div> -->
+        <div class="col-md-12">
+          <div class="card-body">
+            <h5 class="card-title">Representatives</h5>
+            <p class="card-text">The United States House of Representatives is the lower house of the United States
+              Congress, the Senate being the upper house. Together they compose the national legislature of the United
+              States.
+              <br><br>
+              The composition of the House is established by Article One of the United States Constitution. The House is
+              composed of representatives who sit in congressional districts that are allocated to each of the 50 states
+              on a basis of population as measured by the U.S. Census, with each district entitled to one
+              representative. Since its inception in 1789, all representatives have been directly elected. The total
+              number of voting representatives is fixed by law at 435. As of the 2010 Census, the largest delegation
+              is that of California, with fifty-three representatives. Seven states have only one representative:
+              Alaska, Delaware, Montana, North Dakota, South Dakota, Vermont, and Wyoming.</p>
+            <p class="card-text"><a class="btn btn-outline-dark" data-toggle="collapse" href="#multiCollapseExample1"
+                role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Read more</a></p>
+            <div class="row">
+              <div class="col">
+                <div class="collapse multi-collapse" id="multiCollapseExample1">
+                  <div class="about-dropdown card card-body">
+                    The House is charged with the passage of federal legislation, known as bills, which, after
+                    concurrence by
+                    the Senate, are sent to the president for consideration. In addition to this basic power, the House
+                    has
+                    certain exclusive powers, among them the power to initiate all bills related to revenue; the
+                    impeachment
+                    of federal officers, who are sent to trial before the Senate; and, in cases wherein no candidate
+                    receives
+                    a majority of electors for president, the duty falls upon the House to elect one of the top three
+                    recipients of electors for that office, with one vote given to each state for that purpose. The
+                    House meets in the south wing of the United States Capitol.
+                    <br><br>
+                    The presiding officer is the speaker of the House, who is elected by the members thereof (and is
+                    therefore
+                    traditionally the leader of the controlling party). The speaker and other floor leaders are chosen
+                    by the
+                    Democratic Caucus or the Republican Conference, depending on whichever party has more voting
+                    members.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="table-responsive">
       <table id="house-table" class="table table-striped">
         <caption>List of Representatives</caption>
         <thead class="thead-dark">
           <tr>
             <th>Full Name</th>
-            <th>Party</th>
+            <th>Party Affiliation</th>
             <th>State</th>
-            <th>Senority</th>
+            <th>Years in Office</th>
             <th>Percentage of votes</th>
           </tr>
         </thead>
