Created funcions to calc and render attendance per party per chamber

--- a/home.html
+++ b/home.html
@@ -49,8 +49,8 @@
               Attendance
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">House</a>
-              <a class="dropdown-item" href="#">Senate</a>
+              <a class="dropdown-item" href="./house-attendance.html">House</a>
+              <a class="dropdown-item" href="./senate-attendance.html">Senate</a>
             </div>
           </li>
           <li class="nav-item dropdown">
