minor changes and experimenting with votes average

--- a/house-attendance.html
+++ b/house-attendance.html
@@ -82,7 +82,8 @@
                 <th>% Voted with Party</th>
               </tr>
             </thead>
-            <tbody class="attendance-table_tbody"></tbody>
+            <tbody class="attendance-table_tbody">
+            </tbody>
           </table>
         </div>
 
