--- a/house-data.html
+++ b/house-data.html
@@ -131,7 +131,7 @@
             <th>Percentage of votes</th>
           </tr>
         </thead>
-        <tbody class="house-table_tbody"></tbody>
+        <tbody class="members-table_tbody"></tbody>
       </table>
     </div>
 
