--- a/senate-data.html
+++ b/senate-data.html
@@ -128,7 +128,7 @@
               <th>Percentage of votes</th>
             </tr>
           </thead>
-          <tbody class="senate-table_tbody"></tbody>
+          <tbody class="members-table_tbody"></tbody>
         </table>
       </div>
 
