--- a/house-attendance.html
+++ b/house-attendance.html
@@ -68,13 +68,11 @@
     </nav>
 
     <div class="card mt-3" style="max-width: 100%;">
+      <h2>House at Glace</h2>
       <div class="row no-gutters">
-        <!-- <div class="about-img col-md-4">
-          <img src="./img/TGIFlogo.png" class="card-img" alt="logo">
-        </div> -->
         <div class="table-responsive">
           <table id="house-attendance-table" class="table table-striped">
-            <caption>List of Representatives</caption>
+            <caption>Number of Representatives per Party</caption>
             <thead class="thead-dark">
               <tr>
                 <th>Party</th>
@@ -112,7 +110,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"></script>
-    <script src="./dist/main.bundle.js"></script>
+    <script src="./JS/main.js" type="module"></script>
 </body>
 
 </html>
