--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -84,32 +84,72 @@
           </table>
         </div>
 
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">Attendance</h5>
-            <p class="card-text">The Constitution specifies that a majority of members constitutes a quorum to do
-              business in each house. Representatives and senators rarely force the presence of a quorum by demanding
-              quorum calls; thus, in most cases, debates continue even if a majority is not present.
-              <br><br>
-              The House uses roll-call votes; a clerk calls out the names of all the senators, each senator stating
-              "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal
-              matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by
-              electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President
-              may (if present) cast the tiebreaking vote.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"></script>
-    <script src="./JS/main.js" type="module"></script>
+        <div class="card mt-3" style="max-width: 100%;">
+          <h2>Least Engaged (Bottom 10% Attendance)</h2>
+          <div class="row no-gutters">
+            <div class="table-responsive">
+              <table id="house-engaged-table" class="table table-striped">
+                <caption>Number of Senators per Party</caption>
+                <thead class="thead-dark">
+                  <tr>
+                    <th>Name</th>
+                    <th>Number of Missed Votes</th>
+                    <th>% Missed</th>
+                  </tr>
+                </thead>
+                <tbody class="least-engaged-table_tbody"></tbody>
+              </table>
+            </div>
+
+            <div class="card mt-3" style="max-width: 100%;">
+              <h2>Most Engaged (Top 10% Attendance)</h2>
+              <div class="row no-gutters">
+                <div class="table-responsive">
+                  <table id="house-engaged-table" class="table table-striped">
+                    <caption>Number of Senators per Party</caption>
+                    <thead class="thead-dark">
+                      <tr>
+                        <th>Name</th>
+                        <th>Number of Missed Votes</th>
+                        <th>% Missed</th>
+                      </tr>
+                    </thead>
+                    <tbody class="most-engaged-table_tbody"></tbody>
+                  </table>
+                </div>
+
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Attendance</h5>
+                    <p class="card-text">The Constitution specifies that a majority of members constitutes a quorum to
+                      do
+                      business in each house. Representatives and senators rarely force the presence of a quorum by
+                      demanding
+                      quorum calls; thus, in most cases, debates continue even if a majority is not present.
+                      <br><br>
+                      The House uses roll-call votes; a clerk calls out the names of all the senators, each senator
+                      stating
+                      "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most
+                      formal
+                      matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote
+                      by
+                      electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice
+                      President
+                      may (if present) cast the tiebreaking vote.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+              integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+              crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+              integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+              crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+              integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+              crossorigin="anonymous"></script>
+            <script src="./JS/main.js" type="module"></script>
 </body>
 
 </html>
