--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -59,8 +59,8 @@
               Party Loyalty
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">House</a>
-              <a class="dropdown-item" href="#">Senate</a>
+              <a class="dropdown-item" href="./house-loyalty.html">House</a>
+              <a class="dropdown-item" href="./senate-loyalty.html">Senate</a>
             </div>
           </li>
         </ul>
