--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -97,7 +97,7 @@
                     <th>% Missed</th>
                   </tr>
                 </thead>
-                <tbody class="least-engaged-table_tbody"></tbody>
+                <tbody class="least-table_tbody"></tbody>
               </table>
             </div>
 
@@ -114,7 +114,7 @@
                         <th>% Missed</th>
                       </tr>
                     </thead>
-                    <tbody class="most-engaged-table_tbody"></tbody>
+                    <tbody class="most-table_tbody"></tbody>
                   </table>
                 </div>
 
