--- a/house-attendance.html
+++ b/house-attendance.html
@@ -98,7 +98,7 @@
                     <th>% Missed</th>
                   </tr>
                 </thead>
-                <tbody class="least-engaged-table_tbody"></tbody>
+                <tbody class="least-table_tbody"></tbody>
               </table>
             </div>
 
@@ -115,7 +115,7 @@
                         <th>% Missed</th>
                       </tr>
                     </thead>
-                    <tbody class="most-engaged-table_tbody"></tbody>
+                    <tbody class="most-table_tbody"></tbody>
                   </table>
                 </div>
 
