--- a/senate-loyalty.html
+++ b/senate-loyalty.html
@@ -97,7 +97,7 @@
                     <th>% of Votes with Party</th>
                   </tr>
                 </thead>
-                <tbody class="least-loyal-table_tbody"></tbody>
+                <tbody class="least-table_tbody"></tbody>
               </table>
             </div>
 
@@ -114,7 +114,7 @@
                         <th>% of Votes with Party</th>
                       </tr>
                     </thead>
-                    <tbody class="most-loyal-table_tbody"></tbody>
+                    <tbody class="most-table_tbody"></tbody>
                   </table>
                 </div>
 
