Experimental - checkbox eventListeners added in senate-data.html

--- a/house-data.html
+++ b/house-data.html
@@ -120,6 +120,12 @@
     </div>
 
     <div class="table-responsive">
+      <h2>Party Affiliation</h2>
+      <div class="table-filters">
+        <input type="checkbox" name="Republicans" value="R" class="checkbox" checked> Republicans
+        <input type="checkbox" name="Democrats" value="D" class="checkbox" checked> Democrats
+        <input type="checkbox" name="Independent" value="I" class="checkbox" checked> Independent
+      </div>
       <table id="house-table" class="table table-striped">
         <caption>List of Representatives</caption>
         <thead class="thead-dark">
