--- a/senate-data.html
+++ b/senate-data.html
@@ -69,9 +69,6 @@
 
     <div class="card mt-3" style="max-width: 100%;">
       <div class="row no-gutters">
-        <!-- <div class="about-img col-md-4">
-            <img src="./img/TGIFlogo.png" class="card-img" alt="logo">
-          </div> -->
         <div class="col-md-12">
           <div class="card-body">
             <h5 class="card-title">Senate</h5>
@@ -117,19 +114,26 @@
       </div>
 
       <div class="table-responsive">
-        <table id="senate-table" class="table table-striped">
-          <caption>List of Senators</caption>
-          <thead class="thead-dark">
-            <tr>
-              <th>Full Name</th>
-              <th>Party Affiliation</th>
-              <th>State</th>
-              <th>Years in Office</th>
-              <th>Percentage of votes</th>
-            </tr>
-          </thead>
-          <tbody class="members-table_tbody"></tbody>
-        </table>
+        <h2>Party Affiliation</h2>
+        <div class="table-filters">
+          <input type="checkbox" name="Republicans" value="R" class="checkbox" checked> Republicans
+          <input type="checkbox" name="Democrats" value="D" class="checkbox" checked> Democrats
+          <input type="checkbox" name="Independent" value="I" class="checkbox" checked> Independent
+        </div>
+        <table id="house-table" class="table table-striped">
+          <table id="senate-table" class="table table-striped">
+            <caption>List of Senators</caption>
+            <thead class="thead-dark">
+              <tr>
+                <th>Full Name</th>
+                <th>Party Affiliation</th>
+                <th>State</th>
+                <th>Years in Office</th>
+                <th>Percentage of votes</th>
+              </tr>
+            </thead>
+            <tbody class="members-table_tbody"></tbody>
+          </table>
       </div>
 
       <div class="container text-center">
