Filter count added, House filter working, code not dry yet

--- a/house-data.html
+++ b/house-data.html
@@ -126,6 +126,7 @@
         <input type="checkbox" name="Democrats" value="D" class="checkbox" checked> Democrats
         <input type="checkbox" name="Independent" value="I" class="checkbox" checked> Independent
       </div>
+      <div class="table-length"></div>
       <table id="house-table" class="table table-striped">
         <caption>List of Representatives</caption>
         <thead class="thead-dark">
