--- a/senate-data.html
+++ b/senate-data.html
@@ -120,6 +120,7 @@
           <input type="checkbox" name="Democrats" value="D" class="checkbox" checked> Democrats
           <input type="checkbox" name="Independent" value="I" class="checkbox" checked> Independent
         </div>
+        <div class="table-length"></div>
         <table id="house-table" class="table table-striped">
           <table id="senate-table" class="table table-striped">
             <caption>List of Senators</caption>
