--- a/house-data.html
+++ b/house-data.html
@@ -125,6 +125,7 @@
         <input type="checkbox" name="Republicans" value="R" class="checkbox" checked> Republicans
         <input type="checkbox" name="Democrats" value="D" class="checkbox" checked> Democrats
         <input type="checkbox" name="Independent" value="I" class="checkbox" checked> Independent
+        <select id="table-state-select"></select>
       </div>
       <div class="table-length"></div>
       <table id="house-table" class="table table-striped">
