Select combined with Checkboxes working, still not DRY

--- a/house-data.html
+++ b/house-data.html
@@ -125,7 +125,9 @@
         <input type="checkbox" name="Republicans" value="R" class="checkbox" checked> Republicans
         <input type="checkbox" name="Democrats" value="D" class="checkbox" checked> Democrats
         <input type="checkbox" name="Independent" value="I" class="checkbox" checked> Independent
-        <select id="table-state-select"></select>
+        <select id="table-state-select">
+          <option value="All">All</option>
+        </select>
       </div>
       <div class="table-length"></div>
       <table id="house-table" class="table table-striped">
