--- a/house-attendance.html
+++ b/house-attendance.html
@@ -150,7 +150,7 @@
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
               integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
               crossorigin="anonymous"></script>
-            <script src="./JS/main.js" type="module"></script>
+            <script src="./JS/app.js" type="module"></script>
 </body>
 
 </html>
