started with styling the home page

--- a/home.html
+++ b/home.html
@@ -15,13 +15,6 @@
 <body>
   <div class="container">
 
-    <div class="jumbotron jumbotron-fluid m-0">
-      <div class="container">
-        <h1 class="display-4">Welcome to TGIF</h1>
-        <p class="lead">Transparent Government in Facts</p>
-      </div>
-    </div>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -67,62 +60,84 @@
       </div>
     </nav>
 
-    <div class="card mt-3" style="max-width: 100%;">
-      <div class="row no-gutters">
-        <div class="about-img col-md-4">
-          <img src="./img/TGIFlogo.png" class="card-img" alt="logo">
+    <div class="jumbotron-fluid jumbotron" style="background-color: transparent;">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm welcome">
+            <h1 class="display-4">Welcome to TGIF</h1>
+            <p class="lead">Transparent Government in Facts</p>
+          </div>
+          <div class="col-sm text-right">
+            <img class="jumbotron-img" src="./img/capitol-topper.gif" alt="capitol-logo">
+          </div>
         </div>
-        <div class="col-md-8">
+      </div>
+    </div>
+
+    <div class="card about">
+      <div class="row no-gutters">
+        <div class="col-md-12">
           <div class="card-body">
             <h5 class="card-title">About Us</h5>
             <p class="card-text">Openness, accountability, and honesty define government transparency. In a free
               society, transparency is government's obligation to share information with citizens. It is at the heart of
               how citizens hold their public officials accountable. Here at TGIF we believe that government should be
               transparent.
-
+              <br><br>
               Governments exist to serve the people. Information on how officials conduct the public business and spend
               taxpayer money must be readily available and easily understood. This transparency allows good and just
               governance. Transparency promotes accountability and provides information for citizens about what their
               Government is doing.
-
+              <br><br>
               We also believe that government should be participatory. Public engagement enhances the Government's
               effectiveness and improves the quality of its decisions. Knowledge is widely dispersed in society, and
               public officials benefit from having access to that dispersed knowledge. We invite you to use our site to
               become actively engaged in American government.
-
+              <br><br>
               TGIF works to disclose information in forms that the public can readily find and use. We solicit public
               feedback to identify information of greatest use to the public.</p>
             <p class="card-text"><a class="btn btn-outline-dark" data-toggle="collapse" href="#multiCollapseExample1"
                 role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Read more</a></p>
+
             <div class="row">
-              <div class="col">
+              <div class="col-md-12">
                 <div class="collapse multi-collapse" id="multiCollapseExample1">
-                  <div class="about-dropdown card card-body">
-                    <h5 class="card-title">Background History of Government Transparency</h5>
-                    In the West, the idea that government should be open to public scrutiny and susceptible to public
-                    opinion dates back at least to the time of the Enlightenment, when many philosophes made an attack
-                    on absolutist doctrine of state secrecy, a core part of their intellectual project. The passage of
-                    formal legislative instruments to this end can also be traced to this time with Sweden, for example,
-                    (which then included Finland as a Swedish-governed territory) enacting free press legislation as
-                    part of its constitution (Freedom of the Press Act, 1766). This approach, and that of the
-                    philosophes more broadly, is strongly related to recent historiography on the eighteenth-century
-                    public sphere.
-                    <br><br>
-                    Influenced by Enlightenment thought, the revolutions in America (1776) and France (1789), freedom of
-                    the press enshrined provisions and requirements for public budgetary accounting and freedom of the
-                    press in constitutional articles. In the nineteenth century, attempts by Metternichean statesmen to
-                    row back on these measures were vigorously opposed by a number of eminent liberal politicians and
-                    writers, Bentham, Mill and Acton prominent among the latter.
-                    <br><br>
-                    Open government is widely seen to be a key hallmark of contemporary democratic practice and is often
-                    linked to the passing of freedom of information legislation. Scandinavian countries claim to have
-                    adopted the first freedom of information legislation, dating the origins of its modern provisions to
-                    the eighteenth century and Finland continuing the presumption of openness after gaining independence
-                    in 1917, passing its Act on Publicity of Official Documents in 1951 (superseded by new legislation
-                    in 1999).
-                    <br><br>
-                    The United States passed its Freedom of Information Act (FOIA) in 1966, FOIAs, Access to Information
-                    Acts (AIAs) or equivalent laws were passed in Denmark and Norway in 1970.
+                  <div class="row">
+                    <div class="about-dropdown card card-body col-md-8" style="border: none;">
+                      <h5 class="card-title">Background History of Government Transparency</h5>
+                      In the West, the idea that government should be open to public scrutiny and susceptible to public
+                      opinion dates back at least to the time of the Enlightenment, when many philosophes made an attack
+                      on absolutist doctrine of state secrecy, a core part of their intellectual project. The passage of
+                      formal legislative instruments to this end can also be traced to this time with Sweden, for
+                      example,
+                      (which then included Finland as a Swedish-governed territory) enacting free press legislation as
+                      part of its constitution (Freedom of the Press Act, 1766). This approach, and that of the
+                      philosophes more broadly, is strongly related to recent historiography on the eighteenth-century
+                      public sphere.
+                      <br><br>
+                      Influenced by Enlightenment thought, the revolutions in America (1776) and France (1789), freedom
+                      of
+                      the press enshrined provisions and requirements for public budgetary accounting and freedom of the
+                      press in constitutional articles. In the nineteenth century, attempts by Metternichean statesmen
+                      to
+                      row back on these measures were vigorously opposed by a number of eminent liberal politicians and
+                      writers, Bentham, Mill and Acton prominent among the latter.
+                      <br><br>
+                      Open government is widely seen to be a key hallmark of contemporary democratic practice and is
+                      often
+                      linked to the passing of freedom of information legislation. Scandinavian countries claim to have
+                      adopted the first freedom of information legislation, dating the origins of its modern provisions
+                      to
+                      the eighteenth century and Finland continuing the presumption of openness after gaining
+                      independence
+                      in 1917, passing its Act on Publicity of Official Documents in 1951 (superseded by new legislation
+                      in 1999).
+                      <br><br>
+                      The United States passed its Freedom of Information Act (FOIA) in 1966, FOIAs, Access to
+                      Information
+                      Acts (AIAs) or equivalent laws were passed in Denmark and Norway in 1970.
+                    </div>
+                    <div class="col-md-4 dropdown-img"></div>
                   </div>
                 </div>
               </div>
@@ -131,6 +146,8 @@
         </div>
       </div>
     </div>
+
+
 
   </div>
 
