Home and House of Reps styled

--- a/home.html
+++ b/home.html
@@ -15,8 +15,22 @@
 <body>
   <div class="container">
 
+    <div class="jumbotron-fluid jumbotron">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm welcome">
+            <h1 class="display-4">Welcome to TGIF!</h1>
+            <p class="lead">Transparent Government in Facts</p>
+          </div>
+          <div class="col-sm text-right">
+            <img class="jumbotron-img" src="./img/capitol-topper.gif" alt="capitol-logo">
+          </div>
+        </div>
+      </div>
+    </div>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Menu</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -60,25 +74,11 @@
       </div>
     </nav>
 
-    <div class="jumbotron-fluid jumbotron" style="background-color: transparent;">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm welcome">
-            <h1 class="display-4">Welcome to TGIF</h1>
-            <p class="lead">Transparent Government in Facts</p>
-          </div>
-          <div class="col-sm text-right">
-            <img class="jumbotron-img" src="./img/capitol-topper.gif" alt="capitol-logo">
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="card about">
-      <div class="row no-gutters">
+    <div class="card" style="border: none; border-radius: 0;">
+      <div class="row">
         <div class="col-md-12">
-          <div class="card-body">
-            <h5 class="card-title">About Us</h5>
+          <div class="card-body p-5">
+            <h2 class="card-title pb-3">Our goal, government transparency</h2>
             <p class="card-text">Openness, accountability, and honesty define government transparency. In a free
               society, transparency is government's obligation to share information with citizens. It is at the heart of
               how citizens hold their public officials accountable. Here at TGIF we believe that government should be
@@ -103,7 +103,7 @@
               <div class="col-md-12">
                 <div class="collapse multi-collapse" id="multiCollapseExample1">
                   <div class="row">
-                    <div class="about-dropdown card card-body col-md-8" style="border: none;">
+                    <div class="card card-body col-md-12" style="border: none;">
                       <h5 class="card-title">Background History of Government Transparency</h5>
                       In the West, the idea that government should be open to public scrutiny and susceptible to public
                       opinion dates back at least to the time of the Enlightenment, when many philosophes made an attack
@@ -137,7 +137,6 @@
                       Information
                       Acts (AIAs) or equivalent laws were passed in Denmark and Norway in 1970.
                     </div>
-                    <div class="col-md-4 dropdown-img"></div>
                   </div>
                 </div>
               </div>
@@ -146,8 +145,6 @@
         </div>
       </div>
     </div>
-
-
 
   </div>
 
